--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "dcg",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "main": "src/js/main.js",
+  "scripts": {
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "deploy": "NODE_ENV=production webpack -p"
+  },
   "author": "Marty Naselli",
   "license": "ISC",
   "dependencies": {
-    "g": "^2.0.0",
     "golden-layout": "^1.0.10",
+    "grunt-http-server": "^1.10.1",
     "jquery": "^2.1.4",
-    "rpg-tools": "^0.1.1"
+    "merge": "^1.2.0",
+    "rpg-tools": "^0.1.1",
+    "webpack": "^1.12.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-concat-css": "^0.3.1",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-http-server": "^1.10.1",
-    "grunt-serve": "^0.1.6"
+    "grunt-webpack": "^1.0.11",
+    "html-loader": "^0.3.0",
+    "node-sass": "^3.3.3",
+    "sass-loader": "^2.0.1",
+    "webpack-dev-server": "^1.11.0"
   }
 }
