--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   "author": "Marty Naselli",
   "license": "ISC",
   "dependencies": {
-    "golden-layout": "^1.0.10",
-    "grunt-http-server": "^1.10.1",
-    "jquery": "^2.1.4",
-    "merge": "^1.2.0",
-    "rpg-tools": "^0.1.1",
-    "webpack": "^1.12.2"
+    "golden-layout": "*",
+    "grunt-http-server": "*",
+    "jquery": "^3.0.0-alpha1",
+    "merge": "*",
+    "rpg-tools": "*",
+    "webpack": "*"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-webpack": "^1.0.11",
-    "html-loader": "^0.3.0",
-    "node-sass": "^3.3.3",
-    "sass-loader": "^2.0.1",
-    "webpack-dev-server": "^1.11.0"
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "clean-webpack-plugin": "^0.1.3",
+    "css-loader": "*",
+    "grunt": "*",
+    "grunt-webpack": "*",
+    "html-loader": "*",
+    "mocha": "^2.3.3",
+    "mocha-loader": "^0.7.1",
+    "node-sass": "*",
+    "sass-loader": "*",
+    "style-loader": "*",
+    "webpack-dev-server": "*"
   }
 }
