switched to handlebars and build bind helpers

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Marty Naselli",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.5.0-beta.0",
-    "angular-ui-router": "^0.2.15",
     "golden-layout": "*",
     "grunt-http-server": "*",
+    "handlebars": "^4",
     "jquery": "^3.0.0-alpha1",
+    "keypress.js": "^2.1.0",
     "merge": "*",
+    "object.observe": "^0.2.4",
+    "observe-js": "^0.4.0",
+    "observed": "^1.1.1",
     "rpg-tools": "*",
     "webpack": "*"
   },
@@ -26,7 +29,7 @@
     "css-loader": "*",
     "grunt": "*",
     "grunt-webpack": "*",
-    "html-loader": "*",
+    "handlebars-loader": "^1.1.4",
     "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
     "mocha-loader": "^0.7.1",
