renamed main files to make debugging easier

--- a/src/game_modules/dcg-game-loader/package.json
+++ b/src/game_modules/dcg-game-loader/package.json
@@ -2,7 +2,7 @@
   "name": "dcg-loader",
   "version": "1.0.0",
   "description": "Loads the Dungeon Crawler Game.",
-  "main": "main.js",
+  "main": "game-loader.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
