--- a/src/game_modules/dcg-party/package.json
+++ b/src/game_modules/dcg-party/package.json
@@ -2,7 +2,7 @@
   "name": "dcg-party",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "party.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
