--- a/src/ui_modules/dcg-ui-controls/package.json
+++ b/src/ui_modules/dcg-ui-controls/package.json
@@ -2,7 +2,7 @@
   "name": "dcg-ui-controls",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "controls.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
