--- a/src/ui_modules/dcg-ui-loader/package.json
+++ b/src/ui_modules/dcg-ui-loader/package.json
@@ -2,7 +2,7 @@
   "name": "dcg-golden-layout",
   "version": "1.0.0",
   "description": "Executes the layout for Dungeon Crawler Game. Uses GoldenLayout.js and Angular.js.",
-  "main": "main.js",
+  "main": "ui-loader.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
