--- a/src/ui_modules/dcg-ui-skin/package.json
+++ b/src/ui_modules/dcg-ui-skin/package.json
@@ -2,7 +2,7 @@
   "name": "dcg-skin",
   "version": "1.0.0",
   "description": "Contains Graphics and styling for Dungeon Crawler Game.",
-  "main": "main.js",
+  "main": "skin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
