--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "golden-layout": "*",
     "grunt-http-server": "*",
     "handlebars": "^4",
+    "humanize-string": "^1.0.1",
     "jquery": "^3.0.0-alpha1",
     "keypress.js": "^2.1.0",
     "merge": "*",
@@ -20,6 +21,7 @@
     "observe-js": "^0.4.0",
     "observed": "^1.1.1",
     "rpg-tools": "*",
+    "vanilla-modal": "^1.1.3",
     "webpack": "*"
   },
   "devDependencies": {
