--- a/package.json
+++ b/package.json
@@ -4,40 +4,39 @@
   "description": "",
   "main": "src/js/main.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
-    "deploy": "NODE_ENV=production webpack -p"
+    "dev": "webpack-dev-server --mode=development --open --hot",
+    "build": "webpack --mode=production --progress --hide-modules"
   },
   "author": "Marty Naselli",
   "license": "ISC",
   "dependencies": {
-    "golden-layout": "*",
-    "grunt-http-server": "*",
-    "handlebars": "^4",
-    "humanize-string": "^1.0.1",
-    "jquery": "^3.0.0-alpha1",
-    "keypress.js": "^2.1.0",
-    "merge": "*",
-    "object.observe": "^0.2.4",
-    "observe-js": "^0.4.0",
-    "observed": "^1.1.1",
-    "rpg-tools": "*",
-    "vanilla-modal": "^1.1.3",
-    "webpack": "*"
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "babel-loader": "^8.0.0-beta.3",
+    "css-loader": "^0.28.11",
+    "golden-layout": "^1.5.9",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "keypress.js": "^2.1.5",
+    "lodash": "^4.17.10",
+    "pug-loader": "^2.4.0",
+    "raw-loader": "^0.5.1",
+    "rpg-tools": "^0.1.4",
+    "style-loader": "^0.21.0",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.2.4",
+    "webpack": "^4.11.0"
   },
   "devDependencies": {
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "clean-webpack-plugin": "^0.1.3",
-    "css-loader": "*",
-    "grunt": "*",
-    "grunt-webpack": "*",
-    "handlebars-loader": "^1.1.4",
-    "json-loader": "^0.5.3",
-    "mocha": "^2.3.3",
-    "mocha-loader": "^0.7.1",
-    "node-sass": "*",
-    "sass-loader": "*",
-    "style-loader": "*",
-    "webpack-dev-server": "*"
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.0.3",
+    "vue-template-compiler": "^2.5.16",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   }
 }
