--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rpg-tools": "^0.1.4",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
+    "vue-golden-layout": "^1.1.2",
     "vue-loader": "^15.2.4",
     "webpack": "^4.11.0"
   },
@@ -30,7 +31,8 @@
     "@babel/core": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-harddisk-plugin": "^0.2.0",
     "node-sass": "^4.9.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
