--- a/edit/map/package.json
+++ b/edit/map/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@babel/preset-env": "^7.0.0-beta.49",
     "babel-loader": "^8.0.0-beta.3",
+    "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "golden-layout": "^1.5.9",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
     "rpg-tools": "^0.1.4",
