--- a/edit/map/package.json
+++ b/edit/map/package.json
@@ -11,14 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.0.0-beta.49",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/vue-fontawesome": "^0.1.0",
     "babel-loader": "^8.0.0-beta.3",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
+    "font-awesome": "^4.7.0",
     "golden-layout": "^1.5.9",
     "html-webpack-plugin": "^3.2.0",
+    "i": "^0.3.6",
     "json-loader": "^0.5.7",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
+    "npm": "^6.1.0",
     "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
@@ -26,11 +32,14 @@
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
+    "vuetify": "^1.1.1",
     "webpack": "^4.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
