--- a/edit/map/package.json
+++ b/edit/map/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
     "vuetify": "^1.1.1",
+    "vuex": "^3.0.1",
     "webpack": "^4.11.0"
   },
   "devDependencies": {
