--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
     "json-loader": "^0.5.7",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
     "rpg-tools": "^0.1.4",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
+    "vuetify": "^1.1.1",
+    "vuex": "^3.0.1",
     "webpack": "^4.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/vue-fontawesome": "^0.1.0",
+    "axios": "^0.18.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "bootstrap": "^4.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "node-sass": "^4.9.0",
