keyboard shortcuts for tools, and start on rooms

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,13 @@
         "browser": true,
         "es6": true
     },
+    "plugins": [
+        "vue"
+    ],
     "extends": [
         "eslint:recommended",
-        "plugin:vue/essential"
+        "plugin:vue/essential",
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 2018,
