--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "bootstrap": "^4.1.1",
     "eslint": "^5.3.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-vue": "^5.0.0-beta.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
