--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "esversion": 6,
     "globals": {
       "$": false,
-      "_": false
+      "_": false,
+      "require": false,
+      "Vue": false,
+      "keymage": false
     }
   },
   "dependencies": {
@@ -23,6 +26,7 @@
     "golden-layout": "^1.5.9",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
+    "keymage": "^1.1.3",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
     "popper.js": "^1.14.3",
