--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
   "author": "Marty Naselli",
   "license": "ISC",
   "jshintConfig": {
+    "esnext": true,
     "esversion": 6,
     "globals": {
       "$": false,
       "_": false,
       "require": false,
-      "Vue": false,
       "keymage": false
     }
   },
   "dependencies": {
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "babel-loader": "^8.0.0-beta.3",
     "css-loader": "^0.28.11",
     "golden-layout": "^1.5.9",
     "html-webpack-plugin": "^3.2.0",
@@ -36,18 +34,22 @@
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
-    "vuetify": "^1.1.1",
+    "vuetify": "^1.1.13",
     "vuex": "^3.0.1",
     "webpack": "^4.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/register": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/register": "^7.0.0-rc.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "^0.1.0",
     "axios": "^0.18.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.0-beta.3",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
@@ -58,6 +60,7 @@
     "node-sass": "^4.9.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.0.3",
     "vue-template-compiler": "^2.5.16",
     "webpack-cli": "^3.0.2",
