--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/js/main.js",
   "scripts": {
     "dev": "webpack-dev-server --mode=development --open --hot",
-    "build": "webpack --mode=production --progress --hide-modules"
+    "build": "webpack --mode=production --progress --hide-modules",
+    "test": "node ./node_modules/karma/bin/karma start karma.config.js"
   },
   "author": "Marty Naselli",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "keymage": "^1.1.3",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
+    "mocha": "^5.2.0",
     "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
@@ -51,12 +53,18 @@
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
+    "chai": "^4.1.2",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-vue": "^5.0.0-beta.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "jquery": "^3.3.1",
+    "karma": "^3.0.0",
+    "karma-babel-preprocessor": "^8.0.0-beta.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^3.0.0",
     "node-sass": "^4.9.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
