--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development --open --hot",
     "build": "webpack --mode=production --progress --hide-modules",
-    "test": "node ./node_modules/karma/bin/karma start karma.config.js"
+    "test": "mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\"",
+    "test:watch": "npm run test -- -w"
   },
   "author": "Marty Naselli",
   "license": "ISC",
@@ -24,11 +25,13 @@
     "css-loader": "^0.28.11",
     "golden-layout": "^1.5.9",
     "html-webpack-plugin": "^3.2.0",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.7",
     "keymage": "^1.1.3",
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
     "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
     "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
@@ -60,11 +63,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "jquery": "^3.3.1",
-    "karma": "^3.0.0",
-    "karma-babel-preprocessor": "^8.0.0-beta.0",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-webpack": "^3.0.0",
+    "jsdom": "^12.0.0",
     "node-sass": "^4.9.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
