--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server --mode=development --open --hot",
     "build": "webpack --mode=production --progress --hide-modules",
     "test": "mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\"",
-    "test:watch": "npm run test -- -w"
+    "test:debug": "node --inspect-brk ./node_modules/.bin/mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\""
   },
   "author": "Marty Naselli",
   "license": "ISC",
@@ -31,7 +31,7 @@
     "keypress.js": "^2.1.5",
     "lodash": "^4.17.10",
     "mocha": "^5.2.0",
-    "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.1.0",
     "popper.js": "^1.14.3",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
