fixed some stuff

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/js/main.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open --hot",
+    "dev": "NODE_ENV=develop webpack-dev-server --mode=development --open --hot",
     "build": "webpack --mode=production --progress --hide-modules",
     "test": "mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\"",
     "test:debug": "node --inspect-brk ./node_modules/.bin/mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\""
@@ -53,6 +53,7 @@
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta.3",
+    "babel-plugin-root-import": "^6.4.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
