--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
   "presets": ["@babel/preset-env"],
+  "plugins": [
+    ["babel-plugin-root-import", {"rootPathSuffix": "src"}]
+  ],
   "env": {
     "test": {
       "presets": ["@babel/preset-env"]
