--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/js/main.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open --hot",
+    "dev": "webpack-dev-server --hot",
     "build": "webpack --mode=production --progress --hide-modules",
     "test": "mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\"",
     "test:debug": "node --inspect-brk ./node_modules/.bin/mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\""
@@ -29,49 +29,49 @@
     "json-loader": "^0.5.7",
     "keymage": "^1.1.3",
     "keypress.js": "^2.1.5",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "mocha": "^5.2.0",
-    "mochapack": "^1.1.0",
-    "popper.js": "^1.14.3",
+    "mochapack": "^1.1.13",
+    "popper.js": "^1.16.0",
     "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
     "rpg-tools": "^0.1.4",
     "style-loader": "^0.21.0",
-    "vue": "^2.5.16",
-    "vue-loader": "^15.2.4",
-    "vuetify": "^1.1.13",
-    "vuex": "^3.0.1",
-    "webpack": "^4.11.0"
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vuetify": "^1.5.22",
+    "vuex": "^3.1.2",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/register": "^7.0.0-rc.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0",
-    "@fortawesome/vue-fontawesome": "^0.1.0",
-    "axios": "^0.18.0",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/register": "^7.7.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.18.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.0-beta.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-root-import": "^6.4.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.1",
-    "chai": "^4.1.2",
-    "eslint": "^5.3.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "chai": "^4.2.0",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-vue": "^5.0.0-beta.2",
+    "eslint-plugin-vue": "^5.2.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-harddisk-plugin": "^0.2.0",
-    "jquery": "^3.3.1",
-    "jsdom": "^12.0.0",
-    "node-sass": "^4.9.0",
-    "pug": "^2.0.3",
+    "jquery": "^3.4.1",
+    "jsdom": "^12.2.0",
+    "node-sass": "^4.13.0",
+    "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "regenerator-runtime": "^0.12.1",
-    "sass-loader": "^7.0.3",
-    "vue-template-compiler": "^2.5.16",
-    "webpack-cli": "^3.0.2",
-    "webpack-dev-server": "^3.1.4"
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
