--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,24 @@
-*.swp
+.DS_Store
 node_modules
-environment.json
-dist
+/dist
+/public
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
 .vscode
-.tmp
-.sass-cache
-.ci
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
