--- a/package.json
+++ b/package.json
@@ -1,77 +1,54 @@
 {
-  "name": "dcg",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/js/main.js",
+  "name": "dcg2",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open --hot",
-    "build": "webpack --mode=production --progress --hide-modules",
-    "test": "mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\"",
-    "test:debug": "node --inspect-brk ./node_modules/.bin/mocha-webpack --webpack-config ./webpack.test-config.babel.js \"src/**/*[-.]test.js\""
-  },
-  "author": "Marty Naselli",
-  "license": "ISC",
-  "jshintConfig": {
-    "esnext": true,
-    "esversion": 6,
-    "globals": {
-      "$": false,
-      "_": false,
-      "require": false,
-      "keymage": false
-    }
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "css-loader": "^0.28.11",
-    "golden-layout": "^1.5.9",
-    "html-webpack-plugin": "^3.2.0",
-    "jsdom-global": "^3.0.2",
-    "json-loader": "^0.5.7",
-    "keymage": "^1.1.3",
-    "keypress.js": "^2.1.5",
-    "lodash": "^4.17.21",
-    "mocha": "^5.2.0",
-    "mochapack": "^1.1.15",
-    "popper.js": "^1.16.1",
-    "pug-loader": "^2.4.0",
-    "raw-loader": "^0.5.1",
-    "rpg-tools": "^0.1.4",
-    "style-loader": "^0.21.0",
-    "vue": "^2.6.14",
-    "vue-loader": "^15.9.8",
-    "vuetify": "^1.5.24",
-    "vuex": "^3.6.2",
-    "webpack": "^4.46.0"
+    "body-parser": "^1.19.0",
+    "core-js": "^3.6.5",
+    "fs": "^0.0.1-security",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/register": "^7.16.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^0.1.10",
-    "axios": "^0.24.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-root-import": "^6.6.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.1",
-    "chai": "^4.3.4",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-harddisk-plugin": "^0.2.0",
-    "jquery": "^3.6.0",
-    "jsdom": "^12.2.0",
-    "node-sass": "^4.14.1",
-    "pug": "^2.0.4",
-    "pug-plain-loader": "^1.1.0",
-    "regenerator-runtime": "^0.12.1",
-    "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.14",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
-  }
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.0.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
