--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "fs": "^0.0.1-security",
     "vue": "^3.0.0",
