--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "globals": {
+    "_": "readonly"
+  }
 }
