--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.24.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
