--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+    "vue-jest": "^5.0.0-0",
+    "vuex-mock-context": "^1.2.0"
   },
   "eslintConfig": {
     "root": true,
