--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "date-fns": "^2.27.0",
     "fs": "^0.0.1-security",
     "keymage": "^1.1.3",
     "vue": "^3.0.0",
