--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.27.0",
     "fs": "^0.0.1-security",
     "keymage": "^1.1.3",
+    "pluralize": "^8.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
