--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,14 @@
       "type": "node",
       "request": "launch",
       "name": "Debug Tests",
-      "program": "${workspaceRoot}/node_modules/.bin/jest",
       "cwd": "${workspaceRoot}",
-      "args": ["--i", "--config", "jest.config.js"],
+      "args": [
+        "--experimental-vm-modules",
+        "${workspaceFolder}/node_modules/.bin/jest",
+        "--i",
+        "--config",
+        "jest.config.js"
+      ],
       "windows": {
         "program": "${workspaceFolder}/node_modules/jest/bin/jest"
       }
